@@ -45,7 +45,7 @@ RTI Data Distribution Service user manual.
           <history_kind>KEEP_LAST_HISTORY_QOS</history_kind>
           <history_depth>10</history_depth>
           <max_samples>10</max_samples>
-          <max_samples_per_instance>5</max_samples_per_instance>
+          <max_samples_per_instance>10</max_samples_per_instance>
           <max_instances>2</max_instances>
         </durability_service>
         <protocol>
